# multiple-basis-representation

./: .gitignore  LICENSE  Makefile  README.md  generate_test_data.sh  manager.py  mbr.py  mbr_main.py  noxfile.py  plot_h_energy.py  plot_h_mag.py  plot_size_energy.py  pyproject.toml
src/mbrsim/: graph.py  mbr.py
src/tfimsim/: __init__.py  hamiltonian.py  mbr.py  utils.py
tests/: test_graph.py  test_hamiltonian.py  test_mbr.py
