[build-system]
requires = ["setuptools", "setuptools_scm>=8"]  
build-backend = "setuptools.build_meta"


[project]
name = "mbrsim"  

description = "A Python package to simulate ground state physics with multi-basis representation states"
readme = "README.md"
requires-python = ">=3.8"

dynamic = ["version"]

license = {file = "LICENSE.txt"}

keywords = ["physics", "quantum physics", "simulation"]

authors = [
  {name = "Patrick Emonts", email = "emonts@lorentz.leidenuniv.nl" },
  {name = "Adrian Perez Salinas", email = "perezsalinas@lorentz.leidenuniv.nl" }
]

maintainers = [
  {name = "Patrick Emonts", email = "emonts@lorentz.leidenuniv.nl" },
  {name = "Adrian Perez Salinas", email = "perezsalinas@lorentz.leidenuniv.nl" }
]

classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Natural Science",
  "Topic :: Simulation :: Physics",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "quimb",
  "numpy",
  "networkx",
  "scipy",
  "pandas",
  "tqdm",
  "matplotlib",
  "cssselect",
  "physics-tenpy",
  "kahypar",
]

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["coverage"]

[project.urls]
"Homepage" = "https://github.com/patrickemonts/multiple-basis-representation"
"Bug Reports" = "https://github.com/patrickemonts/multiple-basis-representation/issues"
"Source" = "https://github.com/patrickemonts/multiple-basis-representation/"

[tool.setuptools_scm]
write_to = "src/mbrsim/_version.py"
